test_programs/compile_failure/unused_array_get_known_index_out_of_bounds/src/main.nr
fn main() {
    let array = [1, 2, 3];
    let _ = array[10]; // Index out of bounds
}
